[oozie] Declutter arrows and fix widget clicking problem on IE

--- a/apps/oozie/static/css/workflow-editor.css
+++ b/apps/oozie/static/css/workflow-editor.css
@@ -346,6 +346,7 @@
 
 .card-widget {
   position: relative;
+  z-index: 11;
   overflow-x: auto;
   border: 1px solid #d8d8d8 !important;
 }
@@ -538,6 +539,7 @@ em {
 
 canvas {
   pointer-events: none;
+  z-index: 10;
 }
 
 ul.unstyled li {
